# AutoDash

./: .gitignore  README.md  project_tree.txt
apps/api/: pyproject.toml  requirements.txt  result_test_dashboard.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 993f75ee9410_create_workbook_table.py  ff31cda72b59_create_worksheet_table.py
apps/api/app/: create_app.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/v1/: router.py  workbooks.py
apps/api/app/core/: config.py  logging.py
apps/api/app/database/: __init__.py  base.py  session.py
apps/api/app/enums/: __init__.py  aggregation_type.py  workbook_status.py
apps/api/app/models/: __init__.py  base.py  workbook.py  worksheet.py
apps/api/app/repositories/: __init__.py  base_repository.py  workbook_repository.py  worksheet_repository.py
apps/api/app/schemas/: __init__.py  status.py  workbook.py  workbook_upload.py
apps/api/app/services/: workbook_service.py
apps/api/app/services/dashboard/: chart_recommender.py  generator.py  models.py  planner.py  recommender.py  types.py
apps/api/app/services/parser/: __init__.py  models.py  parser.py
apps/api/app/services/profiler/: loader.py  models.py  profiler.py  semantic.py  statistics.py
apps/api/scripts/: test_dashboard.py  test_loader.py  test_parser.py  test_profiler.py  test_repository.py  test_storage.py
apps/api/storage/workbooks/: 0d98b082-7958-480e-9ad4-495d9fbca8d7.xlsx  148cab42-9f67-4785-81c3-d7c72d731426.xls  52a926e6-08ab-4128-9865-5fdca1949b6e.xlsx  bc64ffb2-6555-4621-a019-3edaf12fc96a.xlsx
docs/: ARCHITECTURE.md  (+2 more)
(+22 files in other folders)
