[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.0",
    "boto3>=1.39.0",
    "celery>=5.5.0",
    "duckdb>=1.3.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "orjson>=3.11.0",
    "pandas>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "polars[excel]>=1.31.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyxlsb>=1.0.10",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.40",
    "tenacity>=9.1.0",
    "uvicorn[standard]>=0.35.0",
    "xlrd>=2.0.2",
]
